# MoxelEngine

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
Resources/: sky.comp  test.comp  triangle.vert  triangle_meshed.vert
resources/: test.comp  triangle.frag  triangle.vert
src/: SDLarria.cpp  main.cpp
src/editor/: scene_layer.cpp  scene_layer.h
src/engine/: application.cpp  application.h  chunk.cpp  chunk.h  chunk_builder.cpp  chunk_builder.h  chunk_generator.cpp  chunk_generator.h  image.cpp  image.h  render_camera.cpp  render_camera.h  render_mesh.cpp  render_mesh.h  render_quad.cpp  render_quad.h  voxel_chunk.cpp  voxel_chunk.h  window.cpp  window.h
src/engine/core/: core.h  input.cpp  input.h  thread_pool.cpp  uuid.cpp  uuid.h  window.cpp  window.h
src/engine/core/layer/: layer.h  layer_stack.cpp  layer_stack.h
src/engine/core/logger/: log.cpp  log.h
src/engine/renderer/: render_camera.cpp  render_camera.h  render_mesh.cpp  render_mesh.h  vulkan.h  vulkan_allocator.cpp  vulkan_allocator.h  vulkan_buffer.cpp  vulkan_buffer.h  vulkan_command_queue.cpp  vulkan_command_queue.h  vulkan_context.cpp  vulkan_context.h  vulkan_descriptors.cpp  vulkan_descriptors.h  vulkan_framebuffer.cpp  vulkan_framebuffer.h  vulkan_image.cpp  vulkan_image.h  vulkan_pipeline.cpp  vulkan_pipeline.h  vulkan_renderer.cpp  vulkan_renderer.h  vulkan_shader.cpp  vulkan_shader.h  vulkan_swapchain.cpp  vulkan_swapchain.h
src/engine/ui/: gui_layer.cpp  gui_layer.h
src/engine/vulkan/: vulkan.h  vulkan_allocator.cpp  vulkan_allocator.h  vulkan_buffer.h  vulkan_buffer_uniform.cpp  vulkan_buffer_uniform.h  vulkan_buffer_vertex_array.cpp  vulkan_buffer_vertex_array.h  vulkan_command_queue.cpp  vulkan_command_queue.h  vulkan_context.cpp  vulkan_context.h  vulkan_descriptor_set_builder.cpp  vulkan_descriptor_set_builder.h  vulkan_descriptors.cpp  vulkan_engine.cpp  vulkan_engine.h  vulkan_image.cpp  vulkan_image.h  vulkan_instance.cpp  vulkan_instance.h  vulkan_pipeline.cpp  vulkan_pipeline.h  vulkan_renderer.cpp  vulkan_renderer.h  vulkan_shader.cpp  vulkan_shader.h  vulkan_swapchain.cpp  vulkan_swapchain.h  vulkan_vertex_array.cpp  vulkan_vertex_array.h
src/renderer/: application.cpp  application.h
src/renderer/core/: asset.h  input.cpp  input.h  thread_pool.cpp  thread_pool.h  window.cpp  window.h
src/renderer/core/layer/: layer.h  layer_stack.cpp  layer_stack.h
src/renderer/core/logger/: log.cpp  log.h
src/renderer/ui/: gui_layer.cpp  gui_layer.h
src/renderer/vulkan/: vulkan.h  vulkan_allocator.cpp  vulkan_allocator.h  vulkan_buffer.cpp  vulkan_buffer.h  vulkan_buffer_uniform.cpp  vulkan_buffer_uniform.h  vulkan_buffer_vertex_array.cpp  vulkan_buffer_vertex_array.h  vulkan_command_queue.cpp  vulkan_command_queue.h  vulkan_context.cpp  vulkan_context.h  vulkan_descriptors.cpp  vulkan_descriptors.h  vulkan_framebuffer.cpp  vulkan_framebuffer.h  vulkan_image.cpp  vulkan_image.h  vulkan_pipeline.cpp  vulkan_pipeline.h  vulkan_renderer.cpp  vulkan_renderer.h  vulkan_shader.cpp  vulkan_shader.h  vulkan_swapchain.cpp  vulkan_swapchain.h
src/scene/: scene_layer.cpp  scene_layer.h
src/scene/voxels/: chunk.cpp  chunk.h  chunk_generator.cpp  chunk_generator.h  render_camera.cpp  render_quad.cpp  render_quad.h
